[package]
name = "dynamodb_expression"
version = "0.1.8"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Luminoth/dynamodb_expression"
edition = "2024"
keywords = ["dynamodb"]
description = "Port of Go DynamoDB Expressions to Rust"

[dependencies]
anyhow = "1.0.102"
aws-sdk-dynamodb = "1.110.0"
derivative = "2.2.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
aws-config = "1.8.15"
tokio-test = "0.4.5"
