[package]
name = "dynamodb_expression"
version = "0.2.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Luminoth/dynamodb_expression"
edition = "2024"
keywords = ["dynamodb", "aws", "expression", "builder"]
description = "A builder for Amazon DynamoDB expressions, ported from the AWS SDK for Go."

[dependencies]
anyhow = "1.0.102"
aws-sdk-dynamodb = { version = "1.112.0", features = [
    "behavior-version-latest",
] }
derivative = "2.2.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
aws-config = { version = "1.8.17", features = ["behavior-version-latest"] }
tokio-test = "0.4.5"
